# drf-api-permissions-postgres

./: Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
books/: tests.py
books/migrations/: 0001_initial.py
bookshelf/: settings.py  urls.py
